Title overflow (fixes #2213) (#3318)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -459,4 +459,11 @@ body {
     justify-content: end;
   }
 
+  .ellipsis-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    & + button{
+      min-width: auto;
+    }
+  }
 }
